2003-01-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_feature.c (CropImageToHBITMAP): New function to return
 	a region of the image as a HBITMAP.

2003-01-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Fixed Copyright statement on all source files.

	* magick/effect.c (ThresholdImage): Optimized loop.

	* coders/tiff.c (ReadTIFFImage): Read bits more efficiently for
 	bits_per_sample=1.

	* magick/command.c (MogrifyImage): Set image->dither to
 	image_info->dither prior to invoking SetImageType.

	* magick/constitute.c (WriteImage): Set image->dither to
 	image_info->dither.

	* magick/image.c (SetImageType): For case BilevelType, normalize
 	image, and threshold 50% if dithering is disabled.  This is at
 	least 10X faster than quantizing with dither.
	(AllocateImage): Initialize image->dither.
	(CloneImage): Copy image->dither.

	* magick/image.h: Added dither member to Image.

2003-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/tiff/read.t: Added a test for reading 16-bit TIFF
	images.

	* coders/tiff.c (ReadTIFFImage): Support reading 16-bit TIFF images
	with a Q:8 build.

	* magick/color.c (ConstrainColormapIndex): Use VerifyColormapIndex.

	* coders/pnm.c (ReadPNMImage): Use VerifyColormapIndex.

	* coders/gif.c (DecodeImage): Use VerifyColormapIndex.

	* magick/image.c (SyncImage): Use VerifyColormapIndex.

2003-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (ReadBlobByte): Use getc when reading from FILE stream.

	* configure.ac: Added tests for getc_unlocked and putc_unlocked.

	* magick/blob.c (ReadBlobByte): Optimized reading from BlobStream.
	(ReadBlobLSBLong): Optimized reading from BlobStream.
	(ReadBlobLSBShort): Optimized reading from BlobStream.
	(ReadBlobMSBLong): Optimized reading from BlobStream.
	(ReadBlobMSBShort): Optimized reading from BlobStream.
	(ReadBlobStream): New static inline function to read from BlobStream.